--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "dev:clean": "rimraf .next && next dev",
+    "dev:clean": "rimraf .next & next dev",
     "lint": "eslint .",
     "start": "next start"
   },
@@ -16,6 +16,7 @@
     "next": "16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
