add welcome email

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,8 +9,18 @@ NEXT_PUBLIC_COMING_SOON_MODE=false
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 
-# Site URL (for OAuth redirects)
+# Site URL (for OAuth redirects and email links)
 # Local development
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # Production (update with your actual domain)
 # NEXT_PUBLIC_SITE_URL=https://your-domain.com
+
+# Resend Email Service
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY=re_your_api_key_here
+# Format: "Name <email@yourdomain.com>"
+RESEND_FROM_EMAIL=KEEPERS <hello@yourdomain.com>
+
+# Security - Unsubscribe Token Signing
+# Generate a random secret: openssl rand -base64 32
+UNSUBSCRIBE_TOKEN_SECRET=your-random-32-char-secret-here
