--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.6.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
